<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivRedBar">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/description_text"
                    android:textAlignment="center"
                    android:textColor="#E21208"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/tvQRDescSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/prod_name_text"
                    android:textAlignment="center"
                    android:textColor="#E21208"
                    android:textSize="@dimen/_16ssp" />


                <TextView
                    android:id="@+id/tvQRProdNameSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/points"
                    android:textAlignment="center"
                    android:textColor="#E21208"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/tvQRPointsSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp" />

            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btnQRSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/red"
            android:text="@string/claim_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />
    </RelativeLayout>
</layout>