<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:background="@drawable/login_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <RelativeLayout
                android:id="@+id/rlLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_5sdp">
                <ImageView
                    android:id="@+id/ivLang"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/language"/>
                <TextView
                    android:id="@+id/tvLangText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EN"
                    android:textSize="@dimen/_8ssp"
                    android:layout_below="@+id/ivLang"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/qclogo"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/_38ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_text" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/otp_text"
                    android:inputType="number"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_18sdp"/>

                <Button
                    android:id="@+id/btnSendVerifyOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/send_otp"
                    android:background="@color/red"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>