<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">



        <ImageView
            android:id="@+id/ivLanguage"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toStartOf="@+id/tvLanguage"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_lang_new" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintBottom_toBottomOf="@+id/ivLanguage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/plumberImage"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLanguage"
            app:srcCompat="@drawable/plumber_logo"
            tools:ignore="MissingConstraints"></ImageView>

        <EditText
            android:id="@+id/editTextMobile"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="76dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/mobile_text"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textAlignment="center"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plumberImage" />


        <EditText
            android:id="@+id/editTextOTP"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="76dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/otp_text"
            android:inputType="number"
            android:maxLength="6"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/editTextMobile" />

        <Button
            android:id="@+id/buttonGetOtpSubmit"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="160dp"
            android:background="#c54347"
            android:text="@string/get_otp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextOTP" />

        <Button
            android:id="@+id/enroll_customer"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="120dp"
            android:background="#263133"
            android:text="REGISTER YOURSELF"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextOTP" />

        <ImageView
            android:id="@+id/ivBottomRed"
            android:layout_width="0dp"
            android:layout_height="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/bottomred"
            android:scaleType="fitXY"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
