<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:minWidth="@dimen/_300sdp"
        android:layout_margin="@dimen/_5sdp">

        <ImageView
            android:id="@+id/ivTransImage"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_30sdp"
            android:scaleType="fitXY"
            android:src="@drawable/menubg"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="left" />
        <TextView
            android:id="@+id/tvQRCodeDialog"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_10sdp"/>
        <TextView
            android:id="@+id/tvQRProdNameDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20ssp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_10sdp"/>
        <TextView
            android:id="@+id/tvQRDescDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20ssp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/tvQRPointsDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20ssp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_10sdp"/>

        <ImageView
            android:id="@+id/ivTransRightImage"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_22sdp"
            android:scaleType="fitXY"
            android:src="@drawable/rightbottom"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/tab_layout"
            android:background="@color/zxing_result_view"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tvOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20ssp"
            android:text="OK"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>

        &lt;!&ndash;<TextView
            android:id="@+id/tvTransAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_17ssp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnRecent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/rect_bg"
                android:text=" Recent Orders "
                android:textAllCaps="false"
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnNewOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/rect_bg"
                android:text="New Order"
                android:textAllCaps="false"
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/white"/>
        </LinearLayout>&ndash;&gt;

    </LinearLayout>-->
    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_26sdp"
        android:background="#dddcdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivRedBar"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_23sdp"
        android:scaleType="fitXY"
        android:src="@drawable/menubg"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#dddcdd"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/ivRedBar2"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_20sdp"
        android:scaleType="fitXY"
        android:src="@drawable/rightbottom"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRedBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/description_text"
            android:textAlignment="center"
            android:textColor="#E21208"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/tvQRDescDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/prod_name_text"
            android:textAlignment="center"
            android:textColor="#E21208"
            android:textSize="@dimen/_16ssp" />


        <TextView
            android:id="@+id/tvQRProdNameDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="testtttt"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/points"
            android:textAlignment="center"
            android:textColor="#E21208"
            android:textSize="@dimen/_16ssp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvQRPointsDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:visibility="gone"/>

        <!--<TextView
            android:id="@+id/tvQRCodeDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:id="@+id/tvQRProdNameDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:id="@+id/tvQRDescDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:id="@+id/tvQRPointsDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_20ssp" />-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
